// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/life should get state after action: getAccessTokenAsync.request with action: {"payload": [Object], "type": "GET_ACCESS_TOKEN_REQUEST"} 1`] = `
Object {
  "credentials": Object {
    "clientId": "",
    "clientSecret": "",
  },
  "status": false,
}
`;

exports[`reducers/life should get state after action: getAccessTokenAsync.success with action: {"payload": [Object], "type": "GET_ACCESS_TOKEN_SUCCESS"} 1`] = `
Object {
  "credentials": Object {
    "accessToken": "4567",
    "clientId": "",
    "clientSecret": "",
  },
  "status": true,
}
`;

exports[`reducers/life should get state after action: putCredentials with action: {"payload": [Object], "type": "PUT_CREDENTIALS"} 1`] = `
Object {
  "credentials": Object {
    "clientId": "1234",
    "clientSecret": "5678",
  },
  "status": true,
}
`;

exports[`reducers/life should get state after action: setOAuth2 with action: {"payload": [Object], "type": "SET_OAUTH2"} 1`] = `
Object {
  "credentials": Object {
    "clientId": "1234",
    "clientSecret": "5678",
    "redirectUri": "https://arnaud-zg.github.io/ts-foursquare-playground/code",
  },
  "status": true,
}
`;
